--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -346,12 +346,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "browser.quit()"
+    "### Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/melody/opt/anaconda3/lib/python3.7/site-packages/splinter/driver/webdriver/__init__.py:536: FutureWarning: browser.find_link_by_text is deprecated. Use browser.links.find_by_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls = {}\n",
+    "with Browser('chrome') as browser:\n",
+    "    # Visit URL\n",
+    "    base_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "    browser.visit(base_url)\n",
+    "    # Find and click the 'search' button\n",
+    "    #button = browser.find_by_css('.itemLink')\n",
+    "    for hem in (browser.find_by_css('.description')):\n",
+    "        hemisphere_name = hem.find_by_tag('h3').value\n",
+    "        link = hem.find_by_tag('a')['href']\n",
+    "        hemisphere_image_urls[hemisphere_name] = link\n",
+    "       \n",
+    "    for hem in hemisphere_image_urls:\n",
+    "        to_visit = hemisphere_image_urls[hem]\n",
+    "        browser.visit(to_visit)\n",
+    "        new_link = browser.find_link_by_text('Sample')['href']\n",
+    "        hemisphere_image_urls[hem] = new_link"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cerberus Hemisphere Enhanced': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       " 'Schiaparelli Hemisphere Enhanced': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       " 'Syrtis Major Hemisphere Enhanced': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       " 'Valles Marineris Hemisphere Enhanced': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "hemisphere_image_urls\n"
    ]
   },
   {
